force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__OMOpportunity__c/agf__OMOpportunity__c.object-meta.xml
<CustomObject>
    <description>Opportunity Open Market opportunities</description>
    <label>Open Market Opportunity</label>
    <nameField>
        <label>Opportunity Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Market Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>