force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__OMOpportunity__c/fields/agf__Desired_Skills__c.field-meta.xml
<CustomField>
    <fullName>agf__Desired_Skills__c</fullName>
    <label>Desired Skills</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>