force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__OMOpportunity__c/fields/agf__Distributed_Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Distributed_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the team have distributed team members (remote employees)?</description>
    <label>Distributed Team</label>
    <type>Checkbox</type>
</CustomField>