force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__OMOpportunity__c/fields/agf__Function__c.field-meta.xml
<CustomField>
    <fullName>agf__Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dev</fullName>
                <default>true</default>
                <label>Dev</label>
            </value>
            <value>
                <fullName>QE</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Doc</fullName>
            </value>
            <value>
                <fullName>PerfEng</fullName>
            </value>
            <value>
                <fullName>UE</fullName>
            </value>
            <value>
                <fullName>TPM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>