force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__OMOpportunity__c/fields/agf__Highlighted__c.field-meta.xml
<CustomField>
    <fullName>agf__Highlighted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This opportunity will show up on the OOM welcome page.</description>
    <label>V2MOM Top Priority</label>
    <type>Checkbox</type>
</CustomField>