force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__OMOpportunity__c/fields/agf__Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>agf__Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>