force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__OMOpportunity__c/fields/agf__Intranet_Posting__c.field-meta.xml
<CustomField>
    <fullName>agf__Intranet_Posting__c</fullName>
    <inlineHelpText>If there is an associated talentforce posting include a link to the job opening on the intranet.</inlineHelpText>
    <label>Intranet Posting</label>
    <type>Url</type>
</CustomField>