force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__OMOpportunity__c/fields/agf__Opportunity_Description__c.field-meta.xml
<CustomField>
    <fullName>agf__Opportunity_Description__c</fullName>
    <label>Opportunity Description</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>