force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__OMOpportunity__c/fields/agf__Release__c.field-meta.xml
<CustomField>
    <fullName>agf__Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Release the opportunity is for.</description>
    <label>Release</label>
    <referenceTo>agf__ADM_Release__c</referenceTo>
    <relationshipLabel>Open Market Opportunities</relationshipLabel>
    <relationshipName>Open_Market_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>