force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__OMOpportunity__c/fields/agf__Status__c.field-meta.xml
<CustomField>
    <fullName>agf__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Interviewing</fullName>
            </value>
            <value>
                <fullName>Closed-Filled</fullName>
            </value>
            <value>
                <fullName>Closed-Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>