force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__OMOpportunity__c/fields/agf__Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Team__c</fullName>
    <label>Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>