force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__OMOpportunity__c/listViews/agf__All_Closed_Opportunities.listView-meta.xml
<ListView>
    <fullName>agf__All_Closed_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>agf__Team__c</columns>
    <columns>agf__Function__c</columns>
    <columns>agf__Level__c</columns>
    <columns>agf__Hiring_Manager__c</columns>
    <columns>agf__Status__c</columns>
    <columns>agf__Release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Status__c</field>
        <operation>equals</operation>
        <value>Closed-Filled,Closed-Canceled</value>
    </filters>
    <label>All Closed Opportunities</label>
</ListView>